crates/runtime/tests/snapshots/class_methods__method_call.snap
---
source: crates/runtime/tests/class_methods.rs
expression: snapshot
---
# Input:
class T:
  fn test():
    print "test"

T.test()


# Result (success):
none

# Stdout:
test

